# colorin-colorado

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  colorin-colorado.cabal  default.nix  encode-example  flake.nix  hie.yaml  primesIn1000firstNumbers.txt  primesIn100firstNumbers.txt  sample
app/: Main.hs
examples/: odd_1000.txt  pair_1000.txt  pi_1000.txt  primes_100.txt  primes_1000.txt
gen-example/: Main.hs
gen-shuffle-palette/: Main.hs
image-encoder/: Main.hs
palette/: handmade.json  tutorial.md  windows95-ordered.json  windows95-shuffle.json
palette/examples/: encode-example
src/ColorinColorado/: SingleLineSvgCodec.hs  SvgExample.hs  Types.hs  Utils.hs
src/ColorinColorado/Svg/: Codec.hs  Common.hs  ElipticalSvgEncoder.hs  Encoder.hs  QuadraticMatrixSvgCodec.hs  QuadraticMatrixSvgEncoder.hs  SingleLineSvgCodec.hs  SingleLineSvgEncoder.hs  SvgExample.hs
src/ColorinColorado/Types/: Colors.hs  Painter.hs  Palette.hs
test/: Spec.hs
