cabal-version: 2.4
name: colorin-colorado
version: 2022.9.3.4
synopsis: Binaries as 8-bit colored SVGs
build-type: Simple
extra-source-files:  
  README.md

common deps
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Werror
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
  build-depends:
      aeson
    , text
    , base
    , bimap
    , bytestring
    , conduit
    , directory
    , svg-builder
    , safe-exceptions
    , regex-tdfa
    , Unique

library
  import: deps
  ghc-options: 
    -Wunused-packages
  exposed-modules:
      ColorinColorado.Types.Colors
    , ColorinColorado.Types.Palette
    , ColorinColorado.SingleLineSvgCodec
    , ColorinColorado.SvgExample 
    , ColorinColorado.Utils      
  hs-source-dirs: src

executable colorin-colorado
  import: deps
  main-is: Main.hs
  build-depends:
      colorin-colorado
  hs-source-dirs: app
  ghc-options: -threaded -O2 -rtsopts

executable gen-shuffle-palette
  import: deps
  main-is: Main.hs
  build-depends:
      colorin-colorado
    , random
    , random-shuffle
  hs-source-dirs: gen-shuffle-palette
  ghc-options: -threaded -O2 -rtsopts
