cabal-version: 2.4
name: colorin-colorado
version: 2023.3.11.0
synopsis: Binaries interpreted as color matrices or music notes
build-type: Simple
license-file: LICENSE
extra-source-files:  
  README.md

common deps
  default-language: Haskell2010
  ghc-options:
    -Wall
    -Werror
    -Wincomplete-uni-patterns
    -Wincomplete-record-updates
    -Wmissing-import-lists
  build-depends:
      aeson
    , text
    , base
    , bimap
    , bytestring
    , conduit
    , directory
    , extra
    , svg-builder
    , safe-exceptions
    , regex-tdfa
    , Unique

library
  import: deps
  ghc-options: 
    -Wunused-packages
  exposed-modules:
      ColorinColorado.Types.Colors
    , ColorinColorado.Types.Palette
    , ColorinColorado.Types.Painter
    , ColorinColorado.Svg.Encoder
    , ColorinColorado.Svg.Common 
    , ColorinColorado.Svg.SingleLineSvgEncoder
    , ColorinColorado.Svg.QuadraticMatrixSvgEncoder
    , ColorinColorado.Svg.SvgExample 
    , ColorinColorado.Utils      
  hs-source-dirs: src

executable image-encoder
  import: deps
  main-is: Main.hs
  build-depends:
      colorin-colorado
    , turtle
  hs-source-dirs: app
  ghc-options: -threaded -O2 -rtsopts

executable gen-shuffle-palette
  import: deps
  main-is: Main.hs
  build-depends:
      colorin-colorado
    , random
    , random-shuffle
  hs-source-dirs: gen-shuffle-palette
  ghc-options: -threaded -O2 -rtsopts
